--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <a href="https://wa.me/6288986280988" target="_blank" class="btn btn-success me-2">
                     <i class="bi bi-whatsapp"></i> WhatsApp
                 </a>
-                <a href="https://www.instagram.com/hoodieccted?igsh=bm50bjlpNnV6bzFq" target="_blank" class="btn btn-danger me-2">
+                <a href="https://www.instagram.com/hoodieccted?igsh=NDc0b2FlOWdtc3Nx" target="_blank" class="btn btn-danger me-2">
                     <i class="bi bi-instagram"></i> Instagram
                 </a>
                 <a href="https://www.facebook.com/marketplace/your_page" target="_blank" class="btn btn-primary">
@@ -507,7 +507,7 @@
             <a href="https://wa.me/6288986280988" class="text-white mx-3" target="_blank">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
-            <a href="https://www.instagram.com/hoodieccted?igsh=bm50bjlpNnV6bzFq" class="text-white mx-3" target="_blank">
+            <a href="https://www.instagram.com/hoodieccted?igsh=NDc0b2FlOWdtc3Nx" class="text-white mx-3" target="_blank">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
             <a href="https://facebook.com/yourpage" class="text-white mx-3" target="_blank">
