--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <a href="https://www.instagram.com/hoodieccted?igsh=NDc0b2FlOWdtc3Nx" target="_blank" class="btn btn-danger me-2">
                     <i class="bi bi-instagram"></i> Instagram
                 </a>
-                <a href="https://www.facebook.com/marketplace/your_page" target="_blank" class="btn btn-primary">
+                <a href="https://www.facebook.com/marketplace/item/1287326226023055/" target="_blank" class="btn btn-primary">
                     <i class="bi bi-facebook"></i> Facebook
                 </a>
             </div>
@@ -510,7 +510,7 @@
             <a href="https://www.instagram.com/hoodieccted?igsh=NDc0b2FlOWdtc3Nx" class="text-white mx-3" target="_blank">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
-            <a href="https://facebook.com/yourpage" class="text-white mx-3" target="_blank">
+            <a href="https://www.facebook.com/marketplace/item/1287326226023055/" class="text-white mx-3" target="_blank">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
         </div>
