--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary-subtle shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold fs-3" href="#" style="color: #6A4E23;">
-                Hoodie<span class="text" style="color: #D2B48C;">ccted</span></a>
+                Hoodie<span class="text" style="color: #D2B48C;">ccted</span>
+            </a>
+        </div>
+    </nav>    
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
