--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 Hoodie<span class="text" style="color: #D2B48C;">ccted</span>
             </a>
         </div>
-    </nav>    
+    </nav>   
+        <nav>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
