--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             </a>
         </div>
     </nav>   
-        <nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary-subtle shadow-sm fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold fs-3" href="#" style="color: #6A4E23;">
+                Hoodie<span class="text" style="color: #D2B48C;">ccted</span>
+            </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
@@ -40,10 +44,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#testimonials">Testimoni</a>
-                    </li>             
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#pesan">Buy Now</a>
-                    </li>                 
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
                     </li>
@@ -53,7 +57,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>    
     <!-- Navbar end -->
 
     <!-- Hero Section start -->
